assets/sass/pages/_home_slide_styles.scss
#home {
  transition: background-color 1s;
  .scroll-page {
    padding: 15vh 5vw 5vh;
    position:fixed;
    width:100%;
    height: 100vh;
    top: 200vh;
    transition: opacity 0.4s, top 0.8s;
    transition-timing-function: cubic-bezier(.34,-0.03,.16,1);
  }
  .layer-1{
    transition-delay: 0s;
  }
  .layer-2{
    transition-delay: 0s;
  }
  .in-view {
    top: 0px !important;
  }
 .viewed {
    top: -200vh !important;
  }
 .to-be-viewed {
    top: 200vh !important;
  }
}

.main-text {
  margin-top: 30px;
  margin-bottom: 20px;
  max-width: 480px;
}

.col-spec-wrapper h4 {
  margin-top: 15px;
  margin-bottom: 5px;
  font-size: 18px;
}

.col-spec-wrapper p {
  font-size: 16px;
}

  .backgroud-0 {
    background-color: white;
  }
  .background-1 {
    background-color: white;
  }
  .background-2{
    background-color: #f8f8f8;
  }

.slide__title-number {
  font-family: 'museo-sans-500', sans-serif;
  margin-bottom: -10px;
  font-size:45px;
}

// Height adjustments before XS break
// @media (max-height: 630px) {
//   @media (min-width: 768px) {
//     #citizenvoice.scroll-page, #link-cloud.scroll-page {
//       padding: 0px;
//       padding-top:60px;
//       padding-right: 20px;
//       padding-left: 5vw;
//     }
//     .tablet-hide {
//       display:none;
//     }
//   }
// }
// @media (max-height: 500px){
//   @media (min-width: 768px) {
//     #citizenvoice.scroll-page, #link-cloud.scroll-page {
//       padding: 0px;
//       padding-top:10px;
//       padding-right: 15px;
//       padding-left: 5vw;
//     }
//     .tablet-hide {
//       display:none;
//     }
//   }
// }


//XS BREAK STYLE
@media (max-width: 767px) {
  body {
    background-color: white !important;
    text-align:center;
  }
  #home #landing .underline-container .underline {
    bottom: 0px;
    height: 10px;
    left:6px;
  }
  .main-text {
    margin-left:auto;
    margin-right: auto;
  }
  #home #landing.layer-1 h1 {
    line-height: 49px;
  }
  #arrow-prompt {
    position: absolute !important;
    & ::after {
      transform: rotate(0deg) !important;
      left: 199px !important;
      bottom: -27px !important;
      font-size: 19px !important;
    }
    span {
      opacity: 1 !important;
    }
    & ::before {
      opacity: 0 !important;
    }
  }
  #home{
    display: initial;
   .scroll-page {
    position:static;
    margin-top:0px;
    margin-bottom: 0px;
    // min-height: 100vh;
   }
  }
  #home #citizenvoice{
    height:690px;
    padding-top: 20px;
    overflow: hidden;
  }
  #home #citizenvoice .divider{
    content: "";
    display: block;
    width: 130vw;
    margin-left: -50px;
    height: 70px;
    background-color: #f8f8f8;
    transform: rotate(4deg);
    z-index: 99999;
  }
  #cv-wrapper, #lc-wrapper {
    width: 100%;
    height: 100%;
    position:relative;
  }
  button.view-project{
    margin-bottom: -115px;
  }

  .col-spec-wrapper {
    padding-left: 5vw;
    padding-right: 5vw;
  }
  #platform, #year, #role {
    padding:0px !important;
  }
  #link-cloud-main-text, #citizen-voice-main-text {
    padding-left: 0px;
    padding-right: 0px;
  }
  #link-cloud-main-text > p, #citizen-voice-main-text > p {
    padding:10px;
  }

  #home #link-cloud {
    overflow: hidden;
    outline:20px solid #f8f8f8;
    background-color: #f8f8f8;
    height:640px;
    padding-bottom:0px;
    // border-bottom:20px solid white;
    padding-top: 80px;
  }
  #home #link-box {
    width: 50vw;
    bottom: -10px;
    max-width: 370px;
    left: calc(50% - 25vw);
  }
  #home #lc-background {
    bottom: -70px;
    left: -40px;
  }
  img#cloud-1 {
   width:160px;
   top:460px;
   left:60px;
  }
  img#cloud-2 {
   top:510px;
  }
}

@media (max-width: 600px) {

  #circle-container {
    background-color: white;
  }
  img#cloud-1 {
   display:none;
  }
  #link-cloud-main-text div.col-spec-wrapper {
    padding-left: 0;
    padding-right: 0;
  }
  img#cloud-2 {
   display:none;
  }
  #home #link-box {
    display:none;
  }
  #home #lc-background {
    display:none;
  }
}

